# first-mcp

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  V2_DEVELOPMENT_PLAN.md  calculate.py  category_manager.py  claude_desktop_config.example.json  debug_migration.py  environment.yml  fileio.py  first_mcp_project.md  generate_embeddings_batch.py  memory_categories.json  memory_system_spec_v.0.2.md  memory_tags.json  migrate_to_tinydb.py  pyproject.toml  remove_db_tools.py  remove_legacy_tools.py  requirements.txt  server.py  setup.py  smart_tag_mapper.py  tag_embeddings.py  test_both_calculators.py  test_calculator_integration.py  test_client.py  test_semantic_search.py  test_timedelta_calculator.py  test_tinydb.py  tinydb_assessment.md
.github/workflows/: ci.yml  pypi-publish.yml
_archive_scripts/: test_embedding_key.py
archive_tests/: test_both_calculators.py  test_calculator_integration.py  test_semantic_search.py  test_timedelta_calculator.py  test_tinydb.py
markdown/: mcp-memory-retrieval-architecture.md  memory-system-evaluation-2026-04-29.md
src/first_mcp/: __init__.py  assistant.py  calendar_tools.py  embeddings.py  fileio.py  server.py  server_impl.py  server_impl_legacy.py  server_test.py  server_v2.py  weather.py
src/first_mcp/bible/: __init__.py  books.py  canonical.py  lookup.py  sources.py
src/first_mcp/memory/: __init__.py  cli.py  database.py  generic_tools.py  memory_tools.py  pagination.py  semantic_search.py  tag_enrichment.py  tag_mapper.py  tag_scoring.py  tag_tools.py
src/first_mcp/prompts/: second_opinion.md  tag_enrichment.md  tag_generation.md
src/first_mcp/storage/: __init__.py  fast_embed_strategy.py  migrate.py  protocols.py  reembed.py  sqlite_storage.py  tagging_engine.py
src/first_mcp/tool_docs/: memory_workflow_guide.md  second_opinion.md  tinydb_list_memories.md  tinydb_memorize.md  tinydb_search_memories.md  workspace_edit_textfile.md
src/first_mcp/utilities/: __init__.py  enrich_runner.py
src/first_mcp/workspace/: __init__.py  cli.py
tests/: __init__.py  test_client.py
tests/data_processing/: README.md  test_bible.py  test_core_operations.py  test_embeddings.py  test_memory_retrieval.py  test_tag_enrichment.py  test_workspace_edit.py
tests/server_implementation/: README.md  test_bible_tool.py  test_embedding_tools.py  test_mcp_client.py  test_memory_retrieval_tools.py  test_search_diagnostic.py  test_workspace_edit_tool.py
tests/server_intelligence/: README.md  test_smart_features.py  test_tag_enrichment.py
